# classification_of_reviews

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
classification_of_reviews/data/: augmentation.py  labeling.py
classification_of_reviews/inference/: predictor.py
classification_of_reviews/training/: metrics.py  model_setup.py  trainer.py
classification_of_reviews/utils/: config.py  helpers.py  logging.py
configs/: config.yaml  data.yaml  inference.yaml
configs/data/: augmentation.yaml  labeling.yaml  preprocessing.yaml
configs/inference/: default.yaml
configs/model/: classification_model.yaml  labeling_model.yaml  lora.yaml
configs/training/: base.yaml  callbacks.yaml  optimizer.yaml
data/: test.csv.dvc  train.csv.dvc
outputs/2025-09-25/10-31-19/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-25/10-40-37/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-25/10-55-24/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-25/10-58-01/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-25/11-02-22/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-25/11-04-10/.hydra/: config.yaml  hydra.yaml
outputs/2025-09-25/11-06-59/.hydra/: hydra.yaml
scripts/: label_data.py  train_model.py
