[project]
name = "classification-of-reviews-project"
version = "0.1.0"
description = "classification of reviews from online store"
authors = [
    {name = "ulandaev.vn@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
